[project]
name = "droxclaw"
version = "0.1.0"
description = "DroxClaw Telegram bot with LangGraph agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(\.venv|venv|__pycache__)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = []
